implemented a semaphore to avoid racing condition when loading local storage

--- a/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
+++ b/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
@@ -52,6 +52,8 @@
 
     private async void UpdateUi(object source, EventArgs args)
     {
+        await Sparkfly.WaitTimerAsync();
+
         Track newestTrack = await Sparkfly.GetCurrentlyPlayingAsync();
 
         Vote? votes = (await Sparkfly.PeekVotingQueue());
