--- a/Sparkfly.Main/Pages/ValidatePartyPage.razor
+++ b/Sparkfly.Main/Pages/ValidatePartyPage.razor
@@ -7,6 +7,7 @@
 
 @inject SparkflyManager Sparkfly
 @inject NavigationManager NavManager
+@inject ProtectedSessionStorage ProtectedSession
 
 @code {
     [Parameter]
@@ -31,7 +32,7 @@
             }
             else if (Code is not null && State is not null)
             {
-                await Sparkfly.SpotifyRequestTokensAsync(Code, State);
+                await Sparkfly.SpotifyRequestTokensAsync(Code, (await ProtectedSession.GetAsync<string>("state")).Value ?? string.Empty, State);
                 NavManager.NavigateTo("/party");
             }
 
