--- a/Sparkfly.Main/Pages/WelcomePage.razor
+++ b/Sparkfly.Main/Pages/WelcomePage.razor
@@ -4,6 +4,7 @@
 
 @inject SparkflyManager Sparkfly
 @inject NavigationManager NavManager
+@inject ProtectedSessionStorage ProtectedSession
 
 <PageTitle>Welcome to Sparkfly!</PageTitle>
 
@@ -14,14 +15,20 @@
     <MudButton OnClick="@GuestSignIn" Variant="Variant.Filled" Color="Color.Primary">Let Me In!</MudButton>
     
     <MudText Class="mt-16" Typo="Typo.h5" Align="Align.Center">If you are the host...</MudText>
-    <MudButton OnClick="@SpotifySignInAsync" Variant="Variant.Filled" Color="Color.Success">Sign in with Spotify</MudButton>
+    <MudButton OnClick="@SpotifySignIn" Variant="Variant.Filled" Color="Color.Success">Sign in with Spotify</MudButton>
 </MudStack>
 
 
 @code {
     private string? _partyId;
 
-    private async Task SpotifySignInAsync() => await Sparkfly.SpotifySignInAsync();
+    private void SpotifySignIn() 
+    {
+        string state = new Random().Next().ToString();
+        
+        ProtectedSession.SetAsync("state", state);
+        NavManager.NavigateTo(Sparkfly.SpotifySignInUri(state).ToString());
+    }
 
     private void GuestSignIn()
     {
