--- a/Sparkfly.Main/Pages/PartyPage.razor
+++ b/Sparkfly.Main/Pages/PartyPage.razor
@@ -3,6 +3,7 @@
 @using Sparkfly.Main.Services
 
 @inject SparkflyManager Sparkfly
+@inject ProtectedSessionStorage ProtectedSession
 
 <MudStack>
     <h3>Share the Party Code!</h3>
@@ -10,16 +11,21 @@
     Your party code with your friends so they can join the party to listen to music together:
     <MudText Typo="Typo.h3">759351</MudText>
 
-    <MudTextField @bind-Value="_clientName" Label="Your Name" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Edit" AdornmentColor="Color.Primary" />
+    <MudTextField @bind-Value="_clientNameInput" Label="Your Name" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Edit" AdornmentColor="Color.Primary" />
     <MudButton OnClick="@SetClientNameAsync" Variant="Variant.Filled" Color="Color.Primary">Update Your Name</MudButton>
 </MudStack>
 
 @code {
-    private string? _clientName;
+    private string? _clientNameInput;
 
     private async Task SetClientNameAsync()
     {
-        if (_clientName is not null)
-            await Sparkfly.SetThisClientNameAsync(_clientName);
+        Client? thisClient = (await ProtectedSession.GetAsync<Client>("this_client")).Value;
+
+        if (thisClient is not null && _clientNameInput is not null)
+        {
+            thisClient.ClientName = _clientNameInput;
+            await ProtectedSession.SetAsync("this_client", thisClient);
+        }
     }
 }
