vote now stores the Client object, not only the clientId string

--- a/Sparkfly.Main/Pages/PartyPage.razor
+++ b/Sparkfly.Main/Pages/PartyPage.razor
@@ -24,7 +24,7 @@
 
         if (thisClient is not null && _clientNameInput is not null)
         {
-            thisClient.ClientName = _clientNameInput;
+            thisClient.Name = _clientNameInput;
             await ProtectedSession.SetAsync("this_client", thisClient);
         }
     }
