--- a/Sparkfly.Main/Pages/ValidatePartyPage.razor
+++ b/Sparkfly.Main/Pages/ValidatePartyPage.razor
@@ -4,6 +4,7 @@
 
 @using Sparkfly.Main.Services
 @using Sparkfly.Main.Data
+@using Sparkfly.Main.Services.RequestApi
 
 @inject SparkflyManager Sparkfly
 @inject NavigationManager NavManager
@@ -32,15 +33,26 @@
             }
             else if (Code is not null && State is not null)
             {
-                await Sparkfly.SpotifyRequestTokensAsync(Code, (await ProtectedSession.GetAsync<string>("state")).Value ?? string.Empty, State);
-                await ProtectedSession.DeleteAsync("state");
-
-                NavManager.NavigateTo("/party");
+                try
+                {
+                    await Sparkfly.SpotifyRequestTokensAsync(Code, (await ProtectedSession.GetAsync<string>("state")).Value ?? string.Empty, State);
+                }
+                catch (Exception ex)
+                {
+                    if (ex is SpotifyApiException || ex is HttpRequestException)
+                        NavManager.NavigateTo("/unhandled-error" + QueryString.Create("message", ex.Message));
+                    else
+                        throw;
+                }
             }
+
+            await ProtectedSession.DeleteAsync("state");
 
             await ProtectedSession.SetAsync("this_client", new Client(Guid.NewGuid().ToString(), null));
 
             Sparkfly.StartTimer();
+
+            NavManager.NavigateTo("/party");
         }
     }
 }
