changed SparkflyManager to singleton and created simple mulitple clients feature

--- a/Sparkfly.Main/Pages/PartyPage.razor
+++ b/Sparkfly.Main/Pages/PartyPage.razor
@@ -26,6 +26,8 @@
         {
             thisClient.Name = _clientNameInput;
             await ProtectedSession.SetAsync("this_client", thisClient);
+
+            Sparkfly.UpdateClient(thisClient);
         }
     }
 }
