currently playing track now shows the correct client who voted on it

--- a/Sparkfly.Main/Pages/SearchPage.razor
+++ b/Sparkfly.Main/Pages/SearchPage.razor
@@ -18,6 +18,7 @@
 
     @if (_searchedTracks is not null)
     {
+        // TODO: verify if vote is already on queue
         @foreach (Track track in _searchedTracks)
         {
             <TrackCard Track="track" OnClickCallback="EnqueueVote" BtnFunc="TrackCard.BtnFunctionality.Add" />
