--- a/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
+++ b/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
@@ -9,22 +9,22 @@
 @inject NavigationManager NavigationManager
 @inject SparkflyManager Sparkfly
 
-<PageTitle>Listening to @_currentTrack?.ArtistsNames[0]</PageTitle>
+<PageTitle>Listening to @_currentVote?.VotedTrack.ArtistsNames[0]</PageTitle>
 
 <MudStack>
     <MudText Align="Align.Center" Typo="Typo.h6">You are listening to:</MudText>
 
-    @if (_currentTrack is not null)
+    @if (_currentVote is not null)
     {
         <MudPaper Class="pa-4" MaxWidth="350px">
-            <MudImage Class="rounded-lg align-self-center" Fluid="true" Src=@_currentTrack.CoverSizesUrl[(int)CoverSize.Medium] Alt="Album current playing" Elevation="25" />
+            <MudImage Class="rounded-lg align-self-center" Fluid="true" Src=@_currentVote.VotedTrack.CoverSizesUrl[(int)CoverSize.Medium] Alt="Album current playing" Elevation="25" />
 
             <MudDivider Class="my-4" DividerType="DividerType.Middle" />
 
-            <MudText Align="Align.Center" Typo="Typo.body1">@_currentTrack.SongName</MudText>
-            <MudText Align="Align.Center" Typo="Typo.body2">@_currentTrack.ArtistsNames[0]</MudText>
+            <MudText Align="Align.Center" Typo="Typo.body1">@_currentVote.VotedTrack.SongName</MudText>
+            <MudText Align="Align.Center" Typo="Typo.body2">@_currentVote.VotedTrack.ArtistsNames[0]</MudText>
             <div class="d-flex justify-center mt-2">
-                <MudText Typo="Typo.caption">Suggested by <strong>Spotify</strong>!</MudText>
+                <MudText Typo="Typo.caption">Suggested by <strong>@_currentVote.Client.Name</strong>!</MudText>
             </div>
         </MudPaper>
 
@@ -38,7 +38,7 @@
 </MudStack>
 
 @code {
-    private Track? _currentTrack;
+    private Vote? _currentVote;
     private Vote? _nextVote;
 
     protected override void OnInitialized()
@@ -50,7 +50,7 @@
 
     private async void UpdateUi(object source, EventArgs args)
     {
-        _currentTrack = Sparkfly.CurrentlyPlayingTrack;
+        _currentVote = Sparkfly.CurrentlyPlayingVote;
         _nextVote = Sparkfly.TryPeekVotingQueue();
 
         await InvokeAsync(StateHasChanged);
