--- a/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
+++ b/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
@@ -43,12 +43,12 @@
 
     protected override void OnInitialized()
     {
-        Sparkfly.SubscribeToTimerEvent(UpdateUi);
+        Sparkfly.TimerUpdateEvent += UpdateUi;
 
         UpdateUi(this, EventArgs.Empty);
     }
 
-    private async void UpdateUi(object source, EventArgs args)
+    private async void UpdateUi(object? source, EventArgs args)
     {
         _currentVote = Sparkfly.CurrentlyPlayingVote;
         _nextVote = Sparkfly.TryPeekVotingQueue();
@@ -56,5 +56,5 @@
         await InvokeAsync(StateHasChanged);
     }
 
-    public void Dispose() => Sparkfly.UnsubscribeToTimerEvent(UpdateUi);
+    public void Dispose() => Sparkfly.TimerUpdateEvent -= UpdateUi;
 }
