created an event to signal when the voting queue has been updated

--- a/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
+++ b/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
@@ -44,6 +44,7 @@
     protected override void OnInitialized()
     {
         Sparkfly.TimerUpdateEvent += UpdateUi;
+        Sparkfly.VotingQueueUpdateEvent += UpdateUi;
 
         UpdateUi(this, EventArgs.Empty);
     }
@@ -56,5 +57,9 @@
         await InvokeAsync(StateHasChanged);
     }
 
-    public void Dispose() => Sparkfly.TimerUpdateEvent -= UpdateUi;
+    public void Dispose()
+    {
+        Sparkfly.TimerUpdateEvent -= UpdateUi;
+        Sparkfly.VotingQueueUpdateEvent -= UpdateUi;
+    }
 }
