--- a/Sparkfly.Main/Pages/WelcomePage.razor
+++ b/Sparkfly.Main/Pages/WelcomePage.razor
@@ -6,24 +6,56 @@
 @inject SparkflyManager Sparkfly
 @inject NavigationManager NavManager
 @inject ProtectedLocalStorage LocalStorage
+@inject IStringLocalizer<WelcomePage> Msg
 
-<PageTitle>Welcome to Sparkfly!</PageTitle>
+<PageTitle>@Msg["welcome"]</PageTitle>
 
-<MudStack>
-    <MudText Class="mb-8" Typo="Typo.h3">Welcome to Sparkfly!</MudText>
+<MudStack Spacing="8">
+    <MudText Typo="Typo.h3" Align="Align.Center">
+        <bold>@Msg["welcome"]</bold>
+    </MudText>
 
-    <MudTextField @bind-Value="_partyId" Label="Party ID" HelperText="Type here the Party ID your host sent you" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Lock" AdornmentColor="Color.Primary"/>
-    <MudButton OnClick="@GuestSignIn" Variant="Variant.Filled" Color="Color.Primary">Let Me In!</MudButton>
-    
-    <MudText Class="mt-16" Typo="Typo.h5" Align="Align.Center">If you are the host...</MudText>
-    <MudButton OnClick="@SpotifySignIn" Variant="Variant.Filled" Color="Color.Success">Sign in with Spotify</MudButton>
+    <MudText Typo="Typo.h6" Align="Align.Center">
+        @Msg["about_1"]
+    </MudText>
+
+
+    <MudDivider Class="p-16" />
+
+
+    <MudText Typo="Typo.body1" Align="Align.Center">
+        @Msg["about_2"]
+    </MudText>
+    <MudText Typo="Typo.body1" Align="Align.Center">
+        @Msg["about_3"]
+    </MudText>
+
+    <MudTextField @bind-Value="_partyId" Label=@Msg["name_label"] HelperText=@Msg["name_helper"] Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Edit" AdornmentColor="Color.Primary" />
+
+
+    <MudDivider />
+
+
+    <MudText Class="mb-n6" Typo="Typo.body1" Align="Align.Center">
+        @Msg["guide_1"]
+    </MudText>
+    <MudButton  OnClick="@GuestSignIn" Variant="Variant.Filled" Color="Color.Primary">
+        @Msg["btn_enter"]
+    </MudButton>
+
+    <MudText Class="mt-2 mb-n6" Typo="Typo.body1" Align="Align.Center">
+        @Msg["guide_2"]
+    </MudText>
+    <MudButton OnClick="@SpotifySignIn" Variant="Variant.Filled" Color="Color.Success">
+        @Msg["btn_spotify"]
+    </MudButton>
 </MudStack>
 
 
 @code {
     private string? _partyId;
 
-    private void SpotifySignIn() 
+    private void SpotifySignIn()
     {
         string state = new Random().Next().ToString();
         LocalStorage.SetAsync("state", state);
