--- a/Sparkfly.Main/_Imports.razor
+++ b/Sparkfly.Main/_Imports.razor
@@ -12,4 +12,5 @@
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using static Sparkfly.Main.Data.Track
 @using Sparkfly.Main.Data
-@using System.Net;
+@using System.Net
+@using Microsoft.Extensions.Localization
