--- a/Sparkfly.Main/Pages/PartyPage.razor
+++ b/Sparkfly.Main/Pages/PartyPage.razor
@@ -4,12 +4,51 @@
 
 @inject SparkflyManager Sparkfly
 @inject ProtectedLocalStorage LocalStorage
+@inject IStringLocalizer<PartyPage> Text
 
-<MudStack>
-    <h3>Share the Party Code!</h3>
+<PageTitle>Listening to @_currentVote?.VotedTrack.ArtistsNames[0]</PageTitle>
 
-    Your party code with your friends so they can join the party to listen to music together:
-    <MudText Typo="Typo.h3">759351</MudText>
+<MudStack Spacing="8">
+    <MudText Typo="Typo.h3" Align="Align.Center">
+        <bold>@Text["welcome"], @(_thisClient?.Name)!</bold>
+    </MudText>
+
+    <MudText Typo="Typo.h6" Align="Align.Center">
+        @Text["about_1"]
+    </MudText>
+
+
+    <MudDivider />
+
+
+    <MudText Typo="Typo.body1" Align="Align.Center">
+        @Text["about_2"]
+    </MudText>
+
+    <MudText Typo="Typo.body2" Align="Align.Center">
+        <div class="d-flex gap-1">
+            <MudIcon Icon="@Icons.Material.Filled.PlayCircle" Class="object-bottom" />
+            @Text["about_currently_playing"]
+        </div>
+    </MudText>
+    <MudText Typo="Typo.body2" Align="Align.Center">
+        <div class="d-flex gap-1">
+            <MudIcon Icon="@Icons.Material.Filled.QueueMusic" Class="object-bottom" />
+            @Text["about_queue"]
+        </div>
+    </MudText>
+    <MudText Typo="Typo.body2" Align="Align.Center">
+        <div class="d-flex gap-1">
+            <MudIcon Icon="@Icons.Material.Filled.Search" Class="object-bottom" />
+            @Text["about_search"]
+        </div>
+    </MudText>
+    <MudText Typo="Typo.body2" Align="Align.Center">
+        <div class="d-flex gap-1">
+            <MudIcon Icon="@Icons.Material.Filled.Info" Class="object-bottom" />
+            @Text["about_info"]
+        </div>
+    </MudText>
 
     <MudTextField @bind-Value="_clientNameInput" Label="Your Name" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Edit" AdornmentColor="Color.Primary" />
     <MudButton OnClick="@SetClientNameAsync" Variant="Variant.Filled" Color="Color.Primary">Update Your Name</MudButton>
@@ -17,17 +56,23 @@
 
 @code {
     private string? _clientNameInput;
+    private Vote? _currentVote;
+    private Client? _thisClient;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _currentVote = Sparkfly.CurrentlyPlayingVote;
+        _thisClient = (await LocalStorage.GetAsync<Client>("this_client")).Value;
+    }
 
     private async Task SetClientNameAsync()
     {
-        Client? thisClient = (await LocalStorage.GetAsync<Client>("this_client")).Value;
-
-        if (thisClient is not null && _clientNameInput is not null)
+        if (_thisClient is not null && _clientNameInput is not null)
         {
-            thisClient.Name = _clientNameInput;
-            await LocalStorage.SetAsync("this_client", thisClient);
+            _thisClient.Name = _clientNameInput;
+            await LocalStorage.SetAsync("this_client", _thisClient);
 
-            Sparkfly.UpdateClient(thisClient);
+            Sparkfly.UpdateClient(_thisClient);
         }
     }
 }
