--- a/Sparkfly.Main/Pages/PartyPage.razor
+++ b/Sparkfly.Main/Pages/PartyPage.razor
@@ -6,7 +6,7 @@
 @inject ProtectedLocalStorage LocalStorage
 @inject IStringLocalizer<PartyPage> Text
 
-<PageTitle>Listening to @_currentVote?.VotedTrack.ArtistsNames[0]</PageTitle>
+<PageTitle>@Text["listening_to"] @_currentVote?.VotedTrack.ArtistsNames[0]</PageTitle>
 
 <MudStack Spacing="8">
     <MudText Typo="Typo.h3" Align="Align.Center">
