added explantion about the priority queues

--- a/Sparkfly.Main/Pages/QueuePage.razor
+++ b/Sparkfly.Main/Pages/QueuePage.razor
@@ -16,6 +16,9 @@
     <MudText Align="Align.Center" Typo="Typo.body1">
         @Text["about_1"]
     </MudText>
+    <MudText Align="Align.Center" Typo="Typo.body1">
+        @Text["about_2"]
+    </MudText>
 
 
     @if (Sparkfly.Votes is not null)
