--- a/Sparkfly.Main/Pages/ValidatePartyPage.razor
+++ b/Sparkfly.Main/Pages/ValidatePartyPage.razor
@@ -54,7 +54,7 @@
             Sparkfly.Clients.Add(newClient);
             await LocalStorage.SetAsync("this_client", newClient);
 
-            NavManager.NavigateTo("/party");
+            NavManager.NavigateTo("/help");
         }
     }
 }
