--- a/Sparkfly.Main/Shared/NavMenu.razor
+++ b/Sparkfly.Main/Shared/NavMenu.razor
@@ -7,6 +7,6 @@
     <MudDivider DividerType="DividerType.Middle"/>
     <br />
 
-    <MudNavLink Href="settings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Settings</MudNavLink>
+    <MudNavLink Href="help" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.Help">Help</MudNavLink>
     <MudNavLink Href="info" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">About</MudNavLink>
 </MudNavMenu>
