--- a/Sparkfly.Main/Pages/InfoPage.razor
+++ b/Sparkfly.Main/Pages/InfoPage.razor
@@ -6,7 +6,7 @@
 <PageTitle>@Text["page_title"]</PageTitle>
 
 <MudStack Spacing="8">
-    <MudText Typo="Typo.h3" Align="Align.Center">
+    <MudText Typo="Typo.h4" Class="mb-n6" Align="Align.Center">
         <bold>@Text["page_title"]</bold>
     </MudText>
 
