--- a/Sparkfly.Main/Pages/WelcomePage.razor
+++ b/Sparkfly.Main/Pages/WelcomePage.razor
@@ -30,7 +30,7 @@
         @Text["about_3"]
     </MudText>
 
-    <MudTextField @bind-Value="_partyId" Label=@Text["name_label"] HelperText=@Text["name_helper"] Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Edit" AdornmentColor="Color.Primary" />
+    <MudTextField @bind-Value="_clientNameInput" Label=@Text["name_label"] HelperText=@Text["name_helper"] Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Outlined.Edit" AdornmentColor="Color.Primary" />
 
 
     <MudDivider />
@@ -39,9 +39,16 @@
     <MudText Class="mb-n6" Typo="Typo.body1" Align="Align.Center">
         @Text["guide_1"]
     </MudText>
-    <MudButton  OnClick="@GuestSignIn" Variant="Variant.Filled" Color="Color.Primary">
+    <MudButton OnClick="@GuestSignIn" Variant="Variant.Filled" Color="Color.Primary">
         @Text["btn_enter"]
     </MudButton>
+
+    @if (_showErrorDialog)
+    {
+        <MudAlert Severity="Severity.Error" Variant="Variant.Filled" Class="mb-n4">
+            @Text["alert"]
+        </MudAlert>
+    }
 
     <MudText Class="mt-2 mb-n6" Typo="Typo.body1" Align="Align.Center">
         @Text["guide_2"]
@@ -53,10 +60,16 @@
 
 
 @code {
-    private string? _partyId;
+    private const int _MAX_CHARS = 26;
+
+    private string? _clientNameInput;
+    private bool _showErrorDialog = false;
 
     private void SpotifySignIn()
     {
+        if (!ValidateName())
+            return;
+
         string state = new Random().Next().ToString();
         LocalStorage.SetAsync("state", state);
 
@@ -73,5 +86,27 @@
         }
     }
 
-    private void GuestSignIn() => NavManager.NavigateTo("/validate");
+    private void GuestSignIn()
+    {
+        if (!ValidateName())
+            return;
+
+        NavManager.NavigateTo("/validate");
+    }
+
+    private bool ValidateName()
+    {
+        if (_clientNameInput is null)
+        {
+            _showErrorDialog = true;
+            return false;
+        }
+        else
+        {
+            if (_clientNameInput.Length > _MAX_CHARS)
+                _clientNameInput = _clientNameInput.Substring(0, _MAX_CHARS);
+
+            return true;
+        }
+    }
 }
